# compat-suva

./: .gitignore  Makefile.am  Makefile.in  compat-suva.spec  compat-suva.spec.in  config.h.in  configure  configure.ac  crc.c  mem.c  mem.h  scl_inlines.c  scl_reader.c  scl_writer.c  sutil.c  sutil.h  suva.h  suva_api.c  suva_api.h  suva_conf.h  suva_conn.c  suva_util.c  suva_util.h
suvlets/BWMeter/remote/: .gitignore  Makefile.am  Makefile.in  bwmeter.c  bwmeter.h  cksum.h  config.h.in  configure  configure.ac  suva_receiver.c  suva_receiver.h
suvlets/Blank/remote/: Blank.c  Blank.h  Makefile.am  Makefile.in  configure  configure.ac  suva_receiver.c
suvlets/DeviceInfo/remote/: DeviceInfo.c  DeviceInfo.h  Makefile.am  Makefile.in  configure  configure.ac  suva_receiver.c  suva_receiver.h
suvlets/SecurityAudit/remote/: .gitignore  Makefile.am  Makefile.in  SecurityAudit.c  SecurityAudit.h  configure  configure.ac  suva_receiver.c  suva_receiver.h
suvlets/SecurityAudit/remote/findutils-4.5.11/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac
suvlets/SecurityAudit/remote/findutils-4.5.11/autom4te.cache/: output.0  requests  traces.0  traces.1
suvlets/SecurityAudit/remote/findutils-4.5.11/build-aux/: Makefile.in
suvlets/SecurityAudit/remote/findutils-4.5.11/doc/: Makefile.in  find.texi
suvlets/SecurityAudit/remote/findutils-4.5.11/find/: Makefile.in  defs.h  exec.c  find.1  find.c  fstype.c  ftsfind.c  parser.c  util.c
suvlets/SecurityAudit/remote/findutils-4.5.11/find/testsuite/: Makefile.in
suvlets/SecurityAudit/remote/findutils-4.5.11/gl/: Makefile.in
suvlets/SecurityAudit/remote/findutils-4.5.11/gl/lib/: Makefile.in
suvlets/SecurityAudit/remote/findutils-4.5.11/lib/: Makefile.in
suvlets/SecurityAudit/remote/findutils-4.5.11/m4/: Makefile.in
suvlets/SecurityAudit/remote/findutils-4.5.11/tests/: Makefile.in
suvlets/SecurityAudit/remote/findutils-4.5.11/xargs/: Makefile.in  xargs.c
suvlets/SecurityAudit/remote/findutils-4.5.11/xargs/testsuite/: Makefile.in
suvlets/SecurityAudit/remote/utils/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  dotfiles.c  passwordless.c  xuids.c
suvlets/Snort/remote/: Makefile.am  Makefile.in  Snort.c  Snort.h  configure  configure.ac  suva_receiver.c  suva_receiver.h
suvlets/Software/remote/: Makefile.am  Makefile.in  Software.c  Software.h  configure  configure.ac  software-wrapper.c  suva_receiver.c  suva_receiver.h
